--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,8 @@ doc-comment = "0.3"
 rstest = "0.17"
 rstest_reuse = "0.5"
 anyhow = "1"
+criterion = "0.5"
+
+[[bench]]
+name = "parsing"
+harness = false
